dynamix/force-app/main/default/objects/EOI_CA_Payment__c/EOI_CA_Payment__c.object-meta.xml
<CustomObject>
    <label>EOI/CA Payment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>EOI/CA Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI/CA Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>