dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Bank_Name1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>EOI/CA Payments</relationshipLabel>
    <relationshipName>EOI_CA_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>