dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Cheque_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Transaction_Number__c</fullName>
    <label>Cheque/ Transaction/ Challan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>