dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reason__c</fullName>
    <label>Credit Note Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest Wave Off</fullName>
            </value>
            <value>
                <fullName>Booking Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>