dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/EOI_CA_Payment__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Payment__c</fullName>
    <formula>Text(Opportunity__r.EOI_CA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI/CA Payment</label>
    <type>Text</type>
</CustomField>