dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Loan Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>