dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Payment_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Category__c</fullName>
    <label>Payment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Cost</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Refundable Interior Deposit</fullName>
            </value>
            <value>
                <fullName>Temporary Electricity Charges</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Security Deposits</fullName>
            </value>
            <value>
                <fullName>Possession/Handover(Other) Charge</fullName>
            </value>
            <value>
                <fullName>Possession/Handover(Other) Charge GST</fullName>
            </value>
            <value>
                <fullName>Security and Share Money</fullName>
            </value>
            <value>
                <fullName>Security and Share Money GST</fullName>
            </value>
            <value>
                <fullName>Transfer Charge</fullName>
            </value>
            <value>
                <fullName>Brokerage Charges</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>GST Avanya Tower A</fullName>
            </value>
            <value>
                <fullName>OCR</fullName>
                <isActive>false</isActive>
                <label>OCR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>