dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Description__c</fullName>
    <label>Payment Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>