dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
                <isActive>false</isActive>
                <label>Bounced</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
                <isActive>false</isActive>
                <label>Cleared</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
            <value>
                <fullName>Wrong Entry</fullName>
                <isActive>false</isActive>
                <label>Wrong Entry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>