dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>NEFT/ RTGS/ IMPS</fullName>
                <label>NEFT/RTGS/IMPS</label>
            </value>
            <value>
                <fullName>Credit/Debit Cards</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>