dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <formula>IF(  Opportunity__r.Account.FirstName &lt;&gt; null &amp;&amp; Opportunity__r.Account.FirstName &lt;&gt; &apos;&apos;, Opportunity__r.Account.FirstName+&apos; &apos;+ Opportunity__r.Account.LastName , Opportunity__r.Account.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>