dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No__c</fullName>
    <description>RA0000001</description>
    <label>Receipt No:</label>
    <length>80</length>
    <type>Text</type>
</CustomField>