dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Receipt_No_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No_Hidden__c</fullName>
    <formula>SUBSTITUTE( Receipt_No__c , &quot;,&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt No Hidden</label>
    <type>Text</type>
</CustomField>