dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Related_Suggested_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Suggested_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Suggested Property</label>
    <referenceTo>Suggested_Property__c</referenceTo>
    <relationshipLabel>EOI/CA Payments</relationshipLabel>
    <relationshipName>EOI_CA_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>