dynamix/force-app/main/default/objects/EOI_CA_Payment__c/fields/Remaining_TDS_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_TDS_Amount__c</fullName>
    <label>Remaining TDS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>